--- a/client/app/modules/challengeSettings/templates/challengeSettings.tpl.html
+++ b/client/app/modules/challengeSettings/templates/challengeSettings.tpl.html
@@ -1,9 +1,92 @@
-<material-tabs selected="selectedTabIndex" class="material-theme-light-blue">
-    <material-tab ui-sref="challengeSettings.basic" label="<i class='fa fa-list fa-2x'></i>" class="material-theme-light-blue">
-    </material-tab>
-    <material-tab ui-sref="challengeSettings.poster" label="<i class='fa fa-file fa-2x'></i>" class="material-theme-light-blue">
-    </material-tab>
-</material-tabs>
-<section ui-view="settingView" class=" container"  style="height:100%">
+<!--<material-tabs selected="selectedTabIndex" class="material-theme-light-blue">-->
+    <!--<material-tab ui-sref="challengeSettings.basic" label="<i class='fa fa-list fa-2x'></i>" class="material-theme-light-blue">-->
+    <!--</material-tab>-->
+    <!--<material-tab ui-sref="challengeSettings.poster" label="<i class='fa fa-file fa-2x'></i>" class="material-theme-light-blue">-->
+    <!--</material-tab>-->
+<!--</material-tabs>-->
+<!--<section ui-view="settingView" class=" container"  style="height:100%">-->
 
-</section>
+<!--</section>-->
+
+
+<tabset justified="true">
+    <tab>
+        <tab-heading>
+            <i class='fa fa-list fa-2x'></i>
+        </tab-heading>
+        <h2 class="center">
+            Edit Basic Information
+        </h2>
+        <section class="container">
+            <form class="form-horizontal" name="projectBasic" role="form">
+                <div class="form-group">
+                    <label  class="col-sm-2 col-xs-12 control-label">Title:</label>
+                    <div class="col-sm-10 col-xs-12">
+                        <input type="text" name="title" ng-model="challenge.title" class="form-control" ng-minlength="2">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label  class="col-sm-2 col-xs-12 control-label">Brief:</label>
+                    <div class="col-sm-10 col-xs-12">
+                        <textarea ui-tinymce="tinymceOptions" ng-model="challenge.brief" ></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label  class="col-sm-2 col-xs-12 control-label">Tags</label>
+                    <div class="col-sm-10 col-xs-12">
+                        <div class="tag-manager" entity="challenge" ng-model="challenge.tags"></div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label  class="col-sm-2 col-xs-12 control-label">Presentation</label>
+                    <div class="col-sm-10 col-xs-12">
+                        <div ui-ace="{mode : 'html'}" ng-model="challenge.presentation"  style="width:100%;height:100px" rows="5"></div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10 col-xs-12">
+                        <button type="submit" class="btn btn-success" ng-disabled="project.$invalid"  ng-click="updateChallenge()">Publish</button>
+                    </div>
+                </div>
+            </form>
+
+            <div class="panel-body">
+                <!--delete project-->
+                <button class="btn btn-danger solid" ng-click="opendel()" >Delete Project</button>
+            </div>
+        </section>
+        <script type="text/ng-template" id="projectDel.html">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4>Attention:</h4>
+                    </div>
+                    <div class="modal-body">
+                        This operation could not undo. Please back up the information before you confirm.
+                    </div>
+                    <div class="modal-footer">
+                        <button ng-click="deleteProject()" href="" class="btn btn-danger">Confirm Delete</button>
+                        <button class="btn btn-warning cancel" ng-click="cancel()">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </script>
+    </tab>
+    <tab>
+        <tab-heading>
+            <i class='fa fa-file fa-2x'></i>
+            Banner
+        </tab-heading>
+        <section ng-controller="BannerCtrl">
+            <h3 class="center">New banner</h3>
+            <image-crop
+                    data-width="900"
+                    data-height="150"
+                    data-shape="square"
+                    data-step="imageCropStep"
+                    data-result="bannerResult"
+                    ng-show="showImageCropper">
+            </image-crop>
+        </section>
+    </tab>
+</tabset>
