--- a/client/app/styles/less/challenge.less
+++ b/client/app/styles/less/challenge.less
@@ -29,8 +29,7 @@
   width:100%;
   height: 200px;
   padding-top:20px;
-  background-color : black;
-//  background-size: 100% 200px;
+  background-size: cover;
   h1{
     margin-top : 0;
     text-decoration: underline;
