--- a/client/app/modules/admin/templates/admin.tpl.html
+++ b/client/app/modules/admin/templates/admin.tpl.html
@@ -1,28 +1,43 @@
 <section class="container">
     <section class="col-sm-6">
+        <h2>
+            Users list
+        </h2>
         <div class="list-group">
-            <span class="list-group-item" ng-repeat="challenge in challenges track by $index">
-                <span ng-bind="challenge.title">
-                </span>
-                <span class="pull-right">
-                    <i class="fa fa-dashboard my-btn" ui-sref="admin.challenge({ pid : challenge.accessUrl })">
-                    </i>
-                    <i class="fa fa-ban my-btn" ng-click="removeChallenge()">
-                    </i>
-                </span>
-            </span>
+            <div class="list-group-item row" ng-repeat="user in usersList track by $index">
+                <div ng-bind="user.realname || user.username" class="col-xs-4">
+                </div>
+                <div class="col-xs-5">
+                    <ui-select ng-model="user.status" theme="bootstrap" >
+                        <ui-select-match placeholder="user status">{{$select.selected.title}}</ui-select-match>
+                        <ui-select-choices repeat="status in statusList">
+                            <div ng-bind="status.title"></div>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+                <div class="col-xs-3">
+                    <i class="fa fa-check my-btn" ng-click="updateStatus()"></i>
+                    <i class="fa fa-ban my-btn" ng-click="removeUser()"></i>
+                </div>
+            </div>
         </div>
     </section>
     <section class="col-sm-6">
+        <span class="material-input-group">
+            <label for="newTag">New Tag</label>
+            <input id="newTag" type="text" ng-model="tag.title" autocomplete="false">
+        </span>
+        <i class="fa fa-plus my-btn" ng-click="addTag()"></i>
+        <h2>
+            Tag list
+        </h2>
         <div class="list-group">
 
-            <span class="list-group-item" ng-repeat="project in projects track by $index">
-                <span ng-bind="project.title">
+            <span class="list-group-item" ng-repeat="tag in tags track by $index">
+                <span ng-bind="tag.title">
                 </span>
                 <span class="pull-right">
-                    <i class="fa fa-dashboard my-btn" ui-sref="admin.project({ pid : project.accessUrl })">
-                    </i>
-                    <i class="fa fa-ban my-btn" ng-click="removeProject()">
+                    <i class="fa fa-ban my-btn" ng-click="removeTag()">
                     </i>
                 </span>
             </span>
