--- a/client/app/modules/projectSetting/templates/basic.tpl.html
+++ b/client/app/modules/projectSetting/templates/basic.tpl.html
@@ -3,48 +3,46 @@
 </h2>
 <section class="row">
     <div class="col-xs-12 ">
+        <div class="col-xs-12 " style="margin-bottom:150px;">
+            <h3 class="center">New banner</h3>
+            <image-crop
+                    data-width="900"
+                    data-height="150"
+                    data-shape="square"
+                    data-step="imageCropStep"
+                    data-result="bannerResult">
+            </image-crop>
+        </div>
         <form class="form-horizontal" name="projectBasic" role="form">
-            <div class="form-group">
-                <label  class="col-sm-2 col-xs-12 control-label">Title:</label>
-                <div class="col-sm-10 col-xs-12">
-                    <input type="text" name="title" ng-model="project.title" class="form-control" ng-minlength="2">
-                </div>
+            <div class="material-input-group col-xs-12">
+                <label for="title">Title</label>
+                <input id="title" type="text" ng-model="project.title" autocomplete="false">
             </div>
-            <div class="form-group">
-                <label  class="col-sm-2 col-xs-12 control-label">Brief:</label>
-                <div class="col-sm-10 col-xs-12">
-                    <textarea ui-tinymce="tinymceOptions" ng-model="project.brief" ></textarea>
-                </div>
+
+            <div class="col-xs-12 form-group">
+                <textarea ui-tinymce="tinymceOptions" ng-model="project.brief" ></textarea>
             </div>
-            <div class="form-group">
-                <label  class="col-sm-2 col-xs-12 control-label">Tags</label>
-                <div class="col-sm-10 col-xs-12">
-                    <div class="tag-manager" entity="project" ng-model="project.tags"></div>
-                </div>
+            <div class="col-xs-12">
+                <div class="tag-manager" entity="project" ng-model="project.tags"></div>
             </div>
-            <div class="form-group">
-                <label  class="col-sm-2 col-xs-12 control-label">Presentation</label>
-                <div class="col-sm-10 col-xs-12">
-                    <div ui-ace="{mode : 'html'}" ng-model="project.presentation"  style="width:100%;height:100px" rows="5"></div>
-                </div>
+            <div class="col-xs-12">
+                <p>Here you can add some embeded content(Youtube, vimeo, slideshare)</p>
+                <div ui-ace="{mode : 'html'}" ng-model="project.presentation"  style="width:100%;height:100px" rows="5"></div>
             </div>
-            <div class="form-group">
-                <label  class="col-sm-2 col-xs-12 control-label">Trello Id</label>
-                <div class="col-sm-10 col-xs-12">
-                    <input type="text" class="form-control" ng-model="project.trello"/>
-                </div>
+
+            <div class="material-input-group col-xs-12">
+                <label for="trello">Trello id</label>
+                <input id="trello" type="text" ng-model="project.trello" autocomplete="false">
             </div>
+
             <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10 col-xs-12">
-                    <button type="submit" class="btn btn-success" ng-disabled="project.$invalid"  ng-click="updateProject(project)">Publish</button>
+                <div class="col-xs-12">
+                    <button type="submit" class="btn btn-success btn-block" ng-disabled="project.$invalid"  ng-click="updateProject(project)">Publish</button>
+                    <button class="btn btn-danger solid btn-block" ng-click="opendel()" ng-show="project.isOwner">Delete Project</button>
                 </div>
             </div>
         </form>
 
-        <div class="panel-body">
-            <!--delete proejct-->
-            <button class="btn btn-danger solid" ng-click="opendel()" ng-show="project.isOwner">Delete Project</button>
-        </div>
     </div>
 </section>
 
@@ -59,7 +57,7 @@
             </div>
             <div class="modal-footer">
                 <button ng-click="deleteProject()" href="" class="btn btn-danger">Confirm Delete</button>
-                <ubtton class="btn btn-warning cancel" ng-click="cancel()">Cancel</button>
+                <button class="btn btn-warning cancel" ng-click="cancel()">Cancel</button>
             </div>
         </div>
     </div>
