--- a/client/app/modules/projectSetting/templates/media.tpl.html
+++ b/client/app/modules/projectSetting/templates/media.tpl.html
@@ -1,4 +1,4 @@
-<h2>Media Management</h2>
+<h2 style="text-align: center;">Media Management</h2>
 <div class="row">
     <div class="col-md-6">
         <h3>File resources</h3>
