--- a/client/app/modules/projectSetting/templates/team.tpl.html
+++ b/client/app/modules/projectSetting/templates/team.tpl.html
@@ -1,32 +1,63 @@
 <h2 class="center">
     Team
 </h2>
-<div class="row">
-    <div class="col-sm-10 ">
-        <div class="panel panel-default">
-            <div class="panel-heading">Member:</div>
-            <div class="panel-body">
-                <ul class="list-unstyled">
-                    <li class="mas pull-left" ng-repeat="member in project.member">
-                        <div user-block="member" del="true" index="{{$index}}" ></div>
-                    </li>
-                 </ul>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">Add Team Member:</div>
-            <div class="panel-body">
-                <form name="inviteform">
-                    <label>Email:</label>
-                    <input type="email" ng-model="invite.friend" class="form-control" required=""><br>
-                    <label>Title:</label>
-                    <input type="text" ng-model="invite.subject" class="form-control"  required=""><br>
-                    <label>Content:</label>
-                    <textarea rows="5"  class="form-control" ng-model="invite.message" required=""></textarea>
-                    <br>
-                    <button class="btn btn-success" ng-disabled="inviteform.$invalid" ng-click="sendInvite()">Send Invitation</button>
-                </form>
-            </div>
-        </div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">Member:</div>
+    <div class="panel-body">
+        <ul class="list-unstyled">
+            <li class="mas pull-left" ng-repeat="member in project.member">
+                <div user-block="member" del="true" index="{{$index}}" ></div>
+            </li>
+         </ul>
+    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading">Add Team Member:</div>
+    <div class="panel-body">
+        <form name="inviteform">
+            <label>Email:</label>
+            <input type="email" ng-model="invite.friend" class="form-control" required=""><br>
+            <label>Title:</label>
+            <input type="text" ng-model="invite.subject" class="form-control"  required=""><br>
+            <label>Content:</label>
+            <textarea rows="5"  class="form-control" ng-model="invite.message" required=""></textarea>
+            <br>
+            <button class="btn btn-success" ng-disabled="inviteform.$invalid" ng-click="sendInvite()">Send Invitation</button>
+        </form>
+    </div>
+</div>
+
+<h2 class="center">
+    Apply Management
+</h2>
+<div class="panel panel-default">
+    <div class="panel-heading">Application Management</div>
+    <div class="panel-body">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Applier</th><th>Content</th><th>Time</td><th>Status</th><th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr  ng-repeat="applyteam in applyteams track by $index">
+                <td >
+                    <div user-info="applyteam.owner"></div>
+                </td>
+                <td>{{applyteam.message}}</td>
+                <td>{{applyteam.createDate|timeago}}</td>
+                <td>
+                    <div ng-show="applyteam.status"><i class="icon-ok"></i></div>
+                    <div ng-hide="applyteam.status">unfinish</div>
+                </td>
+                <td>
+                    <!--<a class="btn btn-success" ng-href="message/new/{{me.username}}?to={{applyteam.owner}}&&subject=Reply:Apply for joining project-{{project.title}}" target="_blank" ng-hide="applyteam.status" tooltip="Email he/she" >Email</a>-->
+                    <div class="btn btn-primary" ng-hide="applyteam.status" tooltip="add he/she as member" ng-click="addToTeam(applyteam.owner,$index)">Add as Member</div>
+                    <div class="btn btn-default" ng-hide="applyteam.status" tooltip="Mark as finished" ng-click="finish($index)">Finished</div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
