--- a/client/app/styles/less/common.less
+++ b/client/app/styles/less/common.less
@@ -1,5 +1,12 @@
 @import "variables";
 
+.icon-tabs{
+  li{
+      cursor:pointer;
+      text-align: center;
+  }
+}
+
 body,html{
   height: 100%;
   max-width: 100%;
