when register and email already exist email is no longer send

--- a/client/app/modules/account/templates/signup.tpl.html
+++ b/client/app/modules/account/templates/signup.tpl.html
@@ -39,7 +39,8 @@
             <small>
                 i have read the terms of services
             </small>
-        </material-checkbox>
+        </material-checkbox>o
+        <a href="http://localhost:5011/auth/github">githu</a>
         <!--<button class="material-button material-theme-light-blue material-button-raised" type="button">Register</button>-->
         <!--<i class="fa fa-sign-in fa-2x my-btn" ng-click="registerUser()"></i>-->
     </div>
