dev prod environement well defined both sides css fixes

--- a/client/app/modules/common/sass/material-redesign.scss
+++ b/client/app/modules/common/sass/material-redesign.scss
@@ -97,3 +97,14 @@ material-ink-bar{
 .material-sidenav-left{
   padding-left: 20px;
 }
+
+@media (min-width: 960px) {
+  material-sidenav {
+    position: absolute !important;
+    -webkit-transition: all 0.3s ease-in-out !important;
+    transition: all 0.3s ease-in-out !important;
+  }
+  .material-sidenav-backdrop {
+    display: block !important;
+  }
+}
