--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -1,4 +1,4 @@
-<section layout="vertical" layout-fill>
+<section layout="vertical" >
     <header layout="vertical" class="challenge-header" style="background-image: url({{ project.banner || 'http://placehold.it/900x150'  }}) !important;" >
         <h1 style="margin: 0;">
             {{ project.title }}
