--- a/client/app/modules/noteLab/templates/notes.tpl.html
+++ b/client/app/modules/noteLab/templates/notes.tpl.html
@@ -1,4 +1,4 @@
-<material-content layout="vertical" layout-sm="horizontal">
+<material-content layout="horizontal" >
     <material-sidenav class="material-sidenav-left material-whiteframe-z2 left" component-id="left">
         <material-content style="padding-left: 20px;" layout="vertical" >
             <material-toolbar layout="horizontal">
@@ -28,26 +28,22 @@
                     </div>
                 </ui-select-choices>
             </ui-select>
-            <material-content style="max-height:200px;">
-                <material-list>
-                    <material-item ng-repeat="note in notes | filter:search track by note._id">
-                        <div class="material-tile-left">
-                            <i class="fa fa-2x" ng-class="{'fa-comments' : note.type == 1,'fa-tasks' : note.type == 2, 'fa-flask' : note.type == 3,'fa-graduation-cap':note.type == 4 }"></i>
-                        </div>
-                        <div class="material-tile-content">
-                            <material-button style="width:100%;"   ui-route="/project/{{ projectId }}/notelab/{{ note._id }}"  ng-class="{ 'material-button-colored' : topicId == note._id }" ui-sref="project.noteLab.details.discussion({ tid : note._id })" layout="horizontal" layout-align="start">
-                                <span ng-bind="note.title"></span>
-                            </material-button>
-                        </div>
-                        <div class="material-tile-right">
-                            <user-block user-id="note.owner" height="'50px'" width="'50px'" style="height:60px !important; margin:auto auto;"></user-block>
-                        </div>
-                    </material-item>
-                </material-list>
-            </material-content>
+            <material-list>
+                <material-item ng-repeat="note in notes | filter:search track by note._id">
+                    <div class="material-tile-left">
+                        <i class="fa fa-2x" ng-class="{'fa-comments' : note.type == 1,'fa-tasks' : note.type == 2, 'fa-flask' : note.type == 3,'fa-graduation-cap':note.type == 4 }"></i>
+                    </div>
+                    <div class="material-tile-content">
+                        <material-button style="width:100%;"   ui-route="/project/{{ projectId }}/notelab/{{ note._id }}"  ng-class="{ 'material-button-colored' : topicId == note._id }" ui-sref="project.noteLab.details.discussion({ tid : note._id })" layout="horizontal" layout-align="start">
+                            <span ng-bind="note.title"></span>
+                        </material-button>
+                    </div>
+                    <div class="material-tile-right">
+                        <user-block user-id="note.owner" height="'50px'" width="'50px'" style="height:60px !important; margin:auto auto;"></user-block>
+                    </div>
+                </material-item>
+            </material-list>
         </material-content>
     </material-sidenav>
-    <div ui-view="topicView" style="width:100%;" class="right-part">
-
-    </div>
+        <div ui-view="topicView" style="width:100%;" class="right-part">    </div>
 </material-content>
