--- a/client/app/modules/workspace/templates/hackpad.tpl.html
+++ b/client/app/modules/workspace/templates/hackpad.tpl.html
@@ -2,8 +2,8 @@
 <material-toolbar >
     <div layout="horizontal">
         <div flex></div>
-        <material-button class="material-theme-green" ng-click="exportHackPad()">
-            Save
+        <material-button class="material-theme-green material-button-fab" ng-click="exportHackPad()">
+            <i class="fa fa-save"></i>
         </material-button>
     </div>
 </material-toolbar>
