--- a/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
@@ -1,4 +1,4 @@
-<material-dialog>
+<material-dialog style="width:80%;height:200px;">
     <material-toolbar layout="horizontal" layout-align="start end" style="text-align:right;">
         <div layout="horizontal">
             <div flex></div>
