--- a/client/app/modules/auth/templates/signin.tpl.html
+++ b/client/app/modules/auth/templates/signin.tpl.html
@@ -31,13 +31,8 @@
             </material-button>
         </div>
         <div>
-            <material-button class="material-button-raised material-theme-red" disabled ng-click="authenticate('google')">
-                <i class="fa fa-google">Sign in with Google (soon)</i>
-            </material-button>
-        </div>
-        <div>
-            <material-button class="material-button-raised material-theme-light-blue" disabled ng-click="authenticate('twitter')">
-                <i class="fa fa-twitter">Sign in with twitter (soon)</i>
+            <material-button class="material-button-raised material-theme-red" ng-click="authenticate('google')">
+                <i class="fa fa-google">Sign in with Google</i>
             </material-button>
         </div>
         <br/>
