--- a/client/app/modules/challenge/templates/suggest.tpl.html
+++ b/client/app/modules/challenge/templates/suggest.tpl.html
@@ -39,8 +39,13 @@
             </material-input-group>
             <material-input-group>
                 <label for="endDate" style="padding-left:100px;">End date</label>
-                <material-input type="date" id="endDate" ng-model="pform.startDate"></material-input>
-            </material-input-group>            <!--<material-input-group>-->
+                <material-input type="date" id="endDate" ng-model="pform.endDate"></material-input>
+            </material-input-group>
+            <!--<material-input-group>-->
+                <!--<label for="enddate">Satrt date</label>-->
+                <!--<material-input type="date" id="startdate"></material-input>-->
+            <!--</material-input-group>-->
+            <!--<material-input-group>-->
                 <!--<label for="enddate">Satrt date</label>-->
                 <!--<material-input type="date" id="startdate"></material-input>-->
             <!--</material-input-group>-->
