--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -1,5 +1,5 @@
 <!-- first section - Home -->
-<section>
+<material-content>
     <ul rn-carousel rn-carousel-indicator="" rn-carousel-control="">
         <!--ng-style="{backgroundImage : 'url(images/carousel/fond' +$index+ '.png)'}"-->
         <li class="list-carousel-challenge" ng-repeat="challenge in challenges" >
@@ -94,4 +94,4 @@
     <ng-include id="signup" src="'modules/auth/templates/signup.tpl.html'"></ng-include>
     <ng-include src="'modules/footer/templates/footer.tpl.html'"></ng-include>
 
-</section>
+</material-content>
