--- a/client/app/modules/profile/templates/include/note-activity.tpl.html
+++ b/client/app/modules/profile/templates/include/note-activity.tpl.html
@@ -6,6 +6,6 @@
         <span>
             publish
         </span>
-        <note-info noteId="notif.entity"></note-info>
+        <note-info note-id="notif.entity"></note-info>
     </div>
 </material-item>
