--- a/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
@@ -1,4 +1,4 @@
-<material-dialog style="width:80%;height:200px;">
+<material-dialog>
     <material-toolbar layout="horizontal" layout-align="start end" style="text-align:right;">
         <div layout="horizontal">
             <div flex></div>
@@ -13,7 +13,7 @@
                     <i  class="fa fa-2x fa-ban"></i>
                 </material-button>
             </div>
-            <material-button ng-click="cancel()">
+            <material-button class="material-button-fab" ng-click="cancel()">
                 <i class="fa fa-times"></i>
             </material-button>
         </div>
