--- a/client/app/modules/common/sass/common.scss
+++ b/client/app/modules/common/sass/common.scss
@@ -19,3 +19,28 @@
     padding-left:20px;
   }
 }
+
+.item-block-container{
+  overflow : hidden;
+  cursor: pointer;
+  position:relative;
+  display : inline-block;
+  margin-right : 15px;
+  width:100%;
+  .item-block{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    background-color: rgba(160, 166, 161, 0.40);
+  }
+  .ng-enter{
+    @extend .challenge-block-container;
+    -webkit-animation: fadeInDown 0.3s ease-in-out;
+    animation: fadeInDown 0.3s ease-in-out;
+  }
+  .ng-leave{
+    @extend .challenge-block-container;
+    -webkit-animation: fadeOutUp 0.3s ease-in-out;
+    animation: fadeOutUp 0.3s ease-in-out; }
+}
