--- a/client/app/modules/hackpad/templates/hackpad.tpl.html
+++ b/client/app/modules/hackpad/templates/hackpad.tpl.html
@@ -1,2 +1,2 @@
-<iframe ng-src="{{ url }}" style='border:0px; width:100%; height:100%; min-height: 550px;'></iframe>
+<iframe src="{{ url }}" ng-bind-html="data" style='border:0px; width:100%; height:100%; min-height: 550px;'></iframe>
 <!--<ng-include ng-if="display" src="'test.html'"></ng-include>-->
