--- a/client/app/modules/project/templates/projects-list.tpl.html
+++ b/client/app/modules/project/templates/projects-list.tpl.html
@@ -5,7 +5,7 @@
                 <img ng-src="{{ project.poster || 'http://placehold.it/90x90' }}" class="" width="100%" alt="project's poster" />
             </div>
             <article class="material-tile-content">
-                <h1 ui-sref="project({ pid : project.accessUrl })">
+                <h1 ui-sref="project.home({ pid : project.accessUrl })">
                     {{ project.title }}
                 </h1>
                 <p ng-bind-html="project.brief">
