--- a/client/app/modules/workspace/templates/files.tpl.html
+++ b/client/app/modules/workspace/templates/files.tpl.html
@@ -1,16 +1,12 @@
-<div layout="horizontal" layout-align="start center">
-    <material-button ng-click="uploadFileModal($event)" flex>
-            <span>
-                upload
-            </span>
-        <i class="material-button-icon fa fa-upload fa-2x"></i>
+<material-toolbar>
+    <material-button ng-click="uploadFileModal($event)" >
+        <i class=" fa fa-upload">Upload</i>
     </material-button>
-
     <material-input-group >
-        <label for="filter">Filter by name <i class="fa fa-search fa-2x"></i></label>
+        <label for="filter" class="fa fa-search">Filter by name</label>
         <material-input type="text" ng-model="fileFilter.originalname" id="filter"/>
     </material-input-group>
-</div>
+</material-toolbar>
 <material-list class="list-resource">
     <material-item ng-repeat="file in files |filter:fileFilter">
         <div class="material-tile-left">
@@ -22,7 +18,7 @@
             </material-button>
         </div>
         <div class="material-tile-right">
-            <user-block userId="file.owner" height="'50px'"></user-block>
+            <user-block user-id="file.owner" height="'50px'" width="'50px'"></user-block>
         </div>
     </material-item>
 </material-list>
