--- a/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
@@ -5,8 +5,8 @@
             <material-button class="material-button-fab" ng-click="addUrl(url)">
                 <i class="fa fa-save"></i>
             </material-button>
-            <material-button class="material-button-fab">
-                <i class="fa fa-times" ng-click="cancel()"></i>
+            <material-button class="material-button-fab" ng-click="cancel()">
+                <i class="fa fa-times" ></i>
             </material-button>
 
         </div>
