--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -14,6 +14,26 @@
 .item-list .material-tile-content {
   padding-left: 20px; }
 
+.item-block-container {
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  margin-right: 15px;
+  width: 100%; }
+  .item-block-container .item-block {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(160, 166, 161, 0.4); }
+  .item-block-container .ng-enter {
+    -webkit-animation: fadeInDown 0.3s ease-in-out;
+    animation: fadeInDown 0.3s ease-in-out; }
+  .item-block-container .ng-leave {
+    -webkit-animation: fadeOutUp 0.3s ease-in-out;
+    animation: fadeOutUp 0.3s ease-in-out; }
+
 .rotation.ng-enter {
   -webkit-animation: flipInX 1s;
   animation: flipInX 1s; }
@@ -81,10 +101,15 @@ material-ink-bar {
   background-color: #5f9ea0 !important;
   height: 4px !important; }
 
-material-dialog material-content {
-  padding-left: 15px;
-  padding-bottom: 10px;
-  padding-top: 10px; }
+material-dialog {
+  width: 90%;
+  height: 300px; }
+  material-dialog material-toolbar {
+    border-bottom: solid 1px black; }
+  material-dialog material-content {
+    padding-left: 15px;
+    padding-bottom: 10px;
+    padding-top: 10px; }
 
 .material-button-fab .fa {
   margin: auto auto;
@@ -408,4 +433,7 @@ header {
   .carousel-body {
     padding-left: 100px; }
   material-card {
-    width: 180px; } }
+    width: 180px; }
+  material-dialog {
+    width: 60%;
+    height: 900px; } }
