--- a/client/app/modules/auth/templates/signup.tpl.html
+++ b/client/app/modules/auth/templates/signup.tpl.html
@@ -5,21 +5,41 @@
         </div>
         <material-input-group>
             <label for="username">Username</label>
-            <material-input id="username" type="text" ng-model="signup.username" />
+            <material-input id="username" type="text" ng-model="signup.username" required name="username"/>
         </material-input-group>
+        <div ng-messages="signupForm.username.$error" ng-if="!signupForm.username.$pristine">
+            <div ng-message="required" class="form-message">
+                username is required
+            </div>
+        </div>
         <material-input-group>
             <label for="emailS">Email</label>
-            <material-input id="emailS" type="text" ng-model="signup.email" />
+            <material-input id="emailS" type="text" ng-model="signup.email" required name="email"/>
         </material-input-group>
+        <div ng-messages="signupForm.email.$error" ng-if="!signupForm.email.$pristine">
+            <div ng-message="required" class="form-message">
+                email is required
+            </div>
+        </div>
         <tag-manager entity="signup"></tag-manager>
         <material-input-group>
             <label for="passwordR">Password</label>
-            <material-input id="passwordR" type="password" ng-model="signup.password" />
+            <material-input id="passwordR" type="password" ng-model="signup.password" required name="password"/>
         </material-input-group>
+        <div ng-messages="signupForm.password.$error" ng-if="!signupForm.password.$pristine">
+            <div ng-message="required" class="form-message">
+                password is required
+            </div>
+        </div>
         <material-input-group >
             <label for="passwordCheck">Repeat your password</label>
-            <material-input id="passwordCheck" type="password" ng-model="check.password" />
+            <material-input id="passwordCheck" type="password" ng-model="check.password" required name="passwordR"/>
         </material-input-group>
+        <div ng-messages="signupForm.passwordR.$error" ng-if="!signupForm.passwordR.$pristine">
+            <div ng-message="required" class="form-message">
+                password is required
+            </div>
+        </div>
         <div>
             <ui-select ng-model="signup.localisation"
                        theme="selectize"
@@ -32,14 +52,16 @@
                 </ui-select-choices>
             </ui-select>
         </div>
-        <material-checkbox ng-model="signupForm.valid">
+        <material-checkbox name="read" required>
             <small>
                 i have read the terms of services
             </small>
         </material-checkbox>
-        <!--<a href="http://localhost:5011/auth/github">githu</a>-->
-        <!--<button class="material-button material-theme-light-blue material-button-raised" type="button">Register</button>-->
-        <!--<i class="fa fa-sign-in fa-2x my-btn" ng-click="registerUser()"></i>-->
-        <material-button style="width:100%;" class="material-button-raised" type="submit">Register</material-button>
+        <div ng-messages="signupForm.read.$error" ng-if="!signupForm.passwordR.$pristine">
+            <div ng-message="required" class="form-message">
+                you must check the box
+            </div>
+        </div>
+        <material-button style="width:100%;" class="material-button-raised" type="submit" ng-disabled="signupForm.$invalid">Register</material-button>
     </form>
 </section>
