--- a/client/app/modules/common/sass/animation.scss
+++ b/client/app/modules/common/sass/animation.scss
@@ -5,6 +5,15 @@
 
 .rotation{
   &.ng-enter{
-    @include anim(flipInX 1s)
+    @include anim(flipInX 1s);
+  }
+}
+
+.form-message{
+  &.ng-enter{
+    @include anim(flipInX 0.5s)
+  }
+  &.ng-leave{
+    @include anim(flipOutX 0.5s)
   }
 }
